# mju

./: LICENSE  MJU_spec.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: fetch.rs  files.rs  history.rs  json.rs  mod.rs
src/components/: Toolbar.tsx
src/components/Analyzer/: ArrayStats.tsx  PathInspector.tsx  SchemaSummary.tsx  SearchResults.tsx  index.tsx
src/components/History/: Drawer.tsx  HistoryEntry.tsx
src/components/InputPanel/: FileInput.tsx  PasteInput.tsx  UrlFetch.tsx  index.tsx
src/components/Viewer/: JsonTree.tsx  RawEditor.tsx  TreeView.tsx  index.tsx
src/lib/: pathUtils.ts  schemaAnalyzer.ts  tauri.ts
src/store/: index.ts
src/types/: index.ts
