[package]
name = "mju"
version = "1.0.0"
description = "MJU — JSON Viewer & Analyzer"
authors = ["you"]
edition = "2021"

[lib]
name = "mju_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
